--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ ul {
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
-    padding: 5px;
+    padding: 25px;
     align-items: center;
 }
 li {
@@ -93,4 +93,57 @@ main{
     margin: 0 auto;
     margin-top: 20px;
     border-radius: 5px;
+}
+
+/*Estilização do extrato*/
+.tituloExtrato{
+    font-size: 18px;
+    text-align: center;
+    margin-top: 40px;
+}
+.tabelaExtrato{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 25px;
+    border-bottom: 1px solid #979797;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#transacao1,
+#transacao2,
+#transacao3{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+    border-bottom: 1px solid #979797;
+    width: 90%;
+    margin-left: 25px;
+    padding-bottom: 15px;
+}
+
+#transacao3{
+    border-bottom: double #979797;
+}
+
+#total{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 15px;
+}
+.textoFinal{
+    margin-right: 30px;
+    font-size: 10px;
+    text-align: end;
+}
+.footer {
+    margin-top: 40%;
+    width: 100%;
+    height: 10px;
+    background-color: #333333;
 }
