--- a/css/index.css
+++ b/css/index.css
@@ -116,14 +116,21 @@ main {
 
 .tabelaExtrato {
     display: flex;
-    justify-content: space-between;
-    margin-left: 25px;
     margin-right: 25px;
     margin-top: 25px;
-    border-bottom: 1px solid #979797;
-    padding-bottom: 10px;
     padding-left: 20px;
-    padding-right: 20px;
+}
+.lista{
+    width: 100%;
+}
+
+tr{
+    margin-left: 20px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #979797;
+    line-height: 40px;
+
 }
 
 #transacao1,
