--- a/css/index.css
+++ b/css/index.css
@@ -127,10 +127,27 @@ main {
 tr{
     margin-left: 20px;
     display: flex;
-    justify-content: space-between;
     border-bottom: 1px solid #979797;
     line-height: 40px;
 
+}
+.trTop{
+    justify-content: space-between;
+}
+.colunaMercadoria{
+    margin-left: 25px;
+}
+.colunaValor{
+    margin-right: 30px;
+}
+.tdDinamico1{
+    width: 70%;
+    margin-left: 10px;
+}
+.tdDinamico2{
+    width: 30%;
+    text-align: end;
+    margin-right: 15px;
 }
 
 #transacao1,
